# ipc-

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.rst
.github/workflows/: build-and-test.yml  poetry.yml
cmake/: build_options.cmake
examples/: CMakeLists.txt  fmt.cpp
examples/mq/: CMakeLists.txt  open.cpp
include/ipcpp/: chrono.hpp  macros.hpp  mq.hpp
include/lpipp/: chrono.hpp  concepts.hpp  epoll.hpp  fcntl.hpp  fd.hpp  file_descriptor.hpp  fmt.hpp  macros.hpp  mq.hpp  shm.hpp  socket.hpp  un.h  un.hpp
src/: CMakeLists.txt  epoll.cpp  fcntl.cpp  file_descriptor.cpp  mq.cpp  shm.cpp  socket.cpp  un.cpp
tests/: CMakeLists.txt  chrono.test.cpp  message_queue.test.cpp
tests/compilation/: CMakeLists.txt  mq.cpp
tests/compilation/epoll/: CMakeLists.txt  invalid_exclusive_combination.cpp  modify_exclusive.cpp
tests/compilation/mq/: CMakeLists.txt  copy_assignment_disabled.cpp  copy_constructor_disabled.cpp  invalid_mode_combination.cpp
tests/compilation/shm/: CMakeLists.txt  invalid_mode_combination.cpp
tests/epoll/: CMakeLists.txt  add.test.cpp  create.test.cpp  event.test.cpp  modify.test.cpp  remove.test.cpp  wait.test.cpp
tests/fcntl/: CMakeLists.txt  duplicate.test.cpp  stat.test.cpp
tests/file-descriptor/: CMakeLists.txt  chown_chmod.test.cpp  duplicate.test.cpp  stat.test.cpp
tests/include/lpipp-test/: macros.hpp
tests/mq/: CMakeLists.txt  attribute.test.cpp  mode.test.cpp  move.test.cpp  notify.test.cpp  open.test.cpp  send.test.cpp  send_receive.test.cpp  timed_send_receive.test.cpp  unlink.test.cpp
tests/shm/: CMakeLists.txt  map.test.cpp  mode.test.cpp  open.test.cpp  truncate.test.cpp  unlink.test.cpp
tests/socket/: CMakeLists.txt  option.test.cpp
tests/un/: CMakeLists.txt  bind.test.cpp  create.test.cpp  socket_type.test.cpp
tools/: CMakeLists.txt  gen-epoll-event-permutations  gen-epoll-events  gen-mode-permutations  gen-mq-mode-permutations  gen-mq-modes  gen-shm-modes  gen-socket-types  gen_permutations.py  gensigrt.cpp
